[gd_scene load_steps=5 format=3 uid="uid://cu05t4l4n7ege"]

[ext_resource type="Script" path="res://Scenes/ConfigScene/ConfigUI.gd" id="1_o5kgk"]
[ext_resource type="PackedScene" uid="uid://cyieg2wh0dmfd" path="res://Scenes/ConfigScene/deck_ratio_input.tscn" id="2_8vwiu"]
[ext_resource type="Script" path="res://Scenes/ConfigScene/StartButton.gd" id="3_eoxox"]
[ext_resource type="Script" path="res://Scenes/ConfigScene/ShowEnemyCardsCheckButton.gd" id="3_w7vhw"]

[node name="ConfigUI" type="ScrollContainer" node_paths=PackedStringArray("des_label", "enemyDeckRatio", "playerDeckRatio", "showEnemyCardplays", "playerHP", "enemyHP")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o5kgk")
des_label = NodePath("VBoxContainer/Panel/DescriptionLabel")
enemyDeckRatio = NodePath("VBoxContainer/Row1/EnemyDeckRatioInput")
playerDeckRatio = NodePath("VBoxContainer/Row2/PlayerDeckRatioInput")
showEnemyCardplays = NodePath("VBoxContainer/Row3/ShowEnemyCardsCheckButton")
playerHP = NodePath("VBoxContainer/Row6/PlayerHPInput")
enemyHP = NodePath("VBoxContainer/Row5/EnemyHPInput")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Row1" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 31.0

[node name="Label" type="Label" parent="VBoxContainer/Row1"]
layout_mode = 2
offset_top = 2.0
offset_right = 206.0
offset_bottom = 28.0
text = "Enemy's deck ratio (A:D:M)"

[node name="EnemyDeckRatioInput" parent="VBoxContainer/Row1" instance=ExtResource("2_8vwiu")]
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 210.0
offset_right = 467.0
offset_bottom = 31.0
grow_horizontal = 1
grow_vertical = 1

[node name="Row2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
offset_top = 35.0
offset_right = 1152.0
offset_bottom = 66.0

[node name="Label" type="Label" parent="VBoxContainer/Row2"]
layout_mode = 2
offset_top = 2.0
offset_right = 178.0
offset_bottom = 28.0
text = "Your deck ratio (A:D:M)"

[node name="PlayerDeckRatioInput" parent="VBoxContainer/Row2" instance=ExtResource("2_8vwiu")]
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 182.0
offset_right = 439.0
offset_bottom = 31.0
grow_horizontal = 1
grow_vertical = 1

[node name="Row3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
offset_top = 70.0
offset_right = 1152.0
offset_bottom = 96.0

[node name="Label" type="Label" parent="VBoxContainer/Row3"]
layout_mode = 2
offset_right = 225.0
offset_bottom = 26.0
text = "Show enemy's selected cards"

[node name="ShowEnemyCardsCheckButton" type="CheckButton" parent="VBoxContainer/Row3"]
layout_mode = 2
offset_left = 229.0
offset_right = 273.0
offset_bottom = 26.0
script = ExtResource("3_w7vhw")

[node name="Row5" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
offset_top = 100.0
offset_right = 1152.0
offset_bottom = 131.0

[node name="Label" type="Label" parent="VBoxContainer/Row5"]
layout_mode = 2
offset_top = 2.0
offset_right = 79.0
offset_bottom = 28.0
text = "Enemy HP"

[node name="EnemyHPInput" type="SpinBox" parent="VBoxContainer/Row5"]
layout_mode = 2
offset_left = 83.0
offset_right = 166.0
offset_bottom = 31.0
min_value = 1.0
value = 1.0

[node name="Row6" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
offset_top = 135.0
offset_right = 1152.0
offset_bottom = 166.0

[node name="Label" type="Label" parent="VBoxContainer/Row6"]
layout_mode = 2
offset_top = 2.0
offset_right = 63.0
offset_bottom = 28.0
text = "Your HP"

[node name="PlayerHPInput" type="SpinBox" parent="VBoxContainer/Row6"]
layout_mode = 2
offset_left = 67.0
offset_right = 150.0
offset_bottom = 31.0
min_value = 1.0
value = 1.0

[node name="Panel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
offset_top = 394.0
offset_right = 1152.0
offset_bottom = 544.0
size_flags_vertical = 10

[node name="DescriptionLabel" type="Label" parent="VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
offset_top = 548.0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_font_sizes/font_size = 38
text = "Start Game"
script = ExtResource("3_eoxox")

[connection signal="value_changed" from="VBoxContainer/Row1/EnemyDeckRatioInput" to="." method="_on_enemy_deck_ratio_input_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Row2/PlayerDeckRatioInput" to="." method="_on_player_deck_ratio_input_value_changed"]
[connection signal="toggled" from="VBoxContainer/Row3/ShowEnemyCardsCheckButton" to="VBoxContainer/Row3/ShowEnemyCardsCheckButton" method="_on_toggled"]
[connection signal="value_changed" from="VBoxContainer/Row5/EnemyHPInput" to="." method="_on_enemy_hp_input_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Row6/PlayerHPInput" to="." method="_on_player_hp_input_value_changed"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="VBoxContainer/StartButton" method="_on_pressed"]
